# aliyun_acp_learning

./: .gitignore  pyproject.toml
.claude/: settings.local.json
LLM_ACP_EN/p2_Build LLM Q&A System/: 2_1_Build_Rookie_FAQ_Bot_with_LLM.ipynb  2_2_Expand_Knowledge_Scope_of_FAQ_Bot.ipynb  2_3_Optimize_Prompts_to_Improve_FAQ_Bot_Response_Quality.ipynb  2_4_Automate_Evaluation_of_FAQ_Bot_Performance.ipynb  2_5_Optimize_RAG_Application_to_Improve_QA_Accuracy.ipynb  2_6_Building_an_Agent_to_Accomplish_Complex_Tasks.ipynb  2_8_Deploy_Model.ipynb  2_9_Practical_Production_of_LLM_Applications.ipynb
LLM_ACP_EN/p2_Build LLM Q&A System/chatbot/: agent.py  evaluate.py  llm.py  rag.py
LLM_ACP_EN/p2_Build LLM Q&A System/config/: load_key.py
LLM_ACP_EN/p2_Build LLM Q&A System/utils/: custom_llm.py
大模型ACP认证教程/: Key.json
大模型ACP认证教程/config/: load_key.py
大模型ACP认证教程/p2_构造大模型问答系统/: 2_1_用大模型构建新人答疑机器人.ipynb  2_2_扩展答疑机器人的知识范围.ipynb  2_3_优化提示词改善答疑机器人回答质量.ipynb  2_4_自动化评测答疑机器人的表现.ipynb  2_5_优化RAG应用提升问答准确度.ipynb  2_6_构建Agent完成复杂任务.ipynb  2_7_通过微调提升模型的准确度与效率.ipynb  2_8_部署模型.ipynb  2_9_大模型应用生产实践.ipynb  2_A_大模型应用安全合规.ipynb
大模型ACP认证教程/p2_构造大模型问答系统/chatbot/: agent.py  evaluate.py  llm.py  rag.py
大模型ACP认证教程/p2_构造大模型问答系统/knowledge_base/test/: default__vector_store.json  docstore.json  index_store.json
大模型ACP认证教程/p2_构造大模型问答系统/utils/: custom_llm.py
